<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">學生關懷APP</string>
    <string name="action_settings">Settings</string>
    <string name="empty"></string>
    <string name="slash">/</string>
    <string name="search">搜尋</string>
    <string name="settings">設定</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="nodds">很抱歉，學校『%s』目前尚無提供「學生關懷APP」所需之服務。</string>
    <string name="nodds1">若您對此服務有興趣，請與我們聯絡</string>
    <string name="nodds_phone">0918479170</string>
    <string name="nodds_contact">呂韻如</string>
    <string name="nodds_email">support@ischool.com.tw</string>

    <!-- items in main activity -->
    <string name="item_student">學生</string>
    <string name="item_teacher">老師</string>
    <string name="item_logout">登出</string>

    <!-- search -->
    <string name="search_hint">請輸入搜尋資訊</string>
    <string name="search_student_result">符合『%s』相關的結果</string>
    <string name="search_result_count">%s 筆符合項目</string>
    <string name="search_progress_dialog">搜尋符合的學生中&#8230;</string>
    <string name="title_activity_search_result">搜尋結果</string>

    <!-- Alert -->
    <string name="alert_title">提示</string>
    <string name="alert_internet_disconnect">目前網路無法連線. 是否開啟無線網路設定 ?</string>

    <!-- logout -->
    <string name="logout_title">登出</string>
    <string name="logout_message">確定要登出 ?</string>

    <!-- progress -->
    <string name="progress_title">載入中</string>

    <!-- main activity -->
    <string name="main_loading_ap">載入可登入學校資訊</string>

    <!-- student fragment -->
    <string name="student_all_grade">所有年級</string>
    <string name="student_grade">年級</string>
    <string name="student_class">班級</string>
    <string name="student_loading_student">載入班級學生資料中&#8230;</string>
    <string name="student_loading_class">載入班級資料中&#8230;</string>
    <string name="empty_list">查無班級學生資料</string>

    <!-- student activity -->
    <string name="title_activity_student">學生資料</string>
    <string name="student_tab_base_info">基本</string>
    <string name="student_tab_score">成績</string>
    <string name="student_tab_attendance">缺曠</string>
    <string name="student_tab_moral">獎懲</string>
    <string name="student_tab_counsel">輔導</string>

    <!-- student base info fragment -->
    <string name="base_student_name">姓名</string>
    <string name="base_student_class">班級</string>
    <string name="base_student_number">學號</string>
    <string name="base_student_seat_no">座號</string>
    <string name="base_student_gender">性別</string>
    <string name="base_student_header_parent">家長與監護人</string>
    <string name="base_student_header_phone">電話</string>
    <string name="base_student_header_address">地址</string>
    <string name="base_student_father_name">父親姓名</string>
    <string name="base_student_mother_name">母親姓名</string>
    <string name="base_student_custodian_name">監護人</string>
    <string name="base_student_phone_permanent">戶籍電話</string>
    <string name="base_student_phone_contact">聯絡電話</string>
    <string name="base_student_phone_other">其它電話</string>
    <string name="base_student_phone_sms">行動電話</string>
    <string name="base_student_address_mailing">居住地址</string>
    <string name="base_student_address_permanent">戶籍地址</string>
    <string name="base_student_address_other">其它地址</string>

    <!-- student attendance fragment -->
    <string name="attendance_unlimit">不限</string>
    <string name="attendance_date">時間範圍</string>
    <string name="attendance_from">從</string>
    <string name="attendance_until">到</string>
    <string name="attendance_all">全部</string>
    <string name="attendance_loading">載入學生缺曠資料中&#8230;</string>
    <string name="attendance_empty_list">查無學生缺曠資料</string>

    <!-- student discipline fragment -->
    <string name="discipline_unlimit">不限</string>
    <string name="discipline_date">時間範圍</string>
    <string name="discipline_from">從</string>
    <string name="discipline_until">到</string>
    <string name="discipline_all">全部</string>
    <string name="discipline_loading">載入學生獎懲紀錄中&#8230;</string>
    <string name="discipline_meritA">大功</string>
    <string name="discipline_meritB">小功</string>
    <string name="discipline_meritC">嘉獎</string>
    <string name="discipline_demeritA">大過</string>
    <string name="discipline_demeritB">小過</string>
    <string name="discipline_demeritC">警告</string>
    <string name="discipline_empty_list">查無學生獎懲資料</string>

    <!-- student score fragment -->
    <string name="score_schoolyear">學年度</string>
    <string name="score_semester">學期</string>
    <string name="score_got">實得/已修</string>
    <string name="score_necessary">必修</string>
    <string name="score_necessary_dept">部定必修</string>
    <string name="score_necessary_school">校定必修</string>
    <string name="score_unnecessary">選修</string>
    <string name="score_unnecessary_dept">部定選修</string>
    <string name="score_unnecessary_school">校定選修</string>
    <string name="score_intern">實習</string>
    <string name="score_score">成績 :</string>
    <string name="score_credit">學分 :</string>
    <string name="score_loading">取得學分資訊中&#8230;</string>
    <string name="score_loading_semester">取得學期資訊中&#8230;</string>
    <string name="score_empty_list">查無學生成績資料</string>

    <!-- counsel -->
    <string name="counsel_interview">晤談</string>
    <string name="counsel_meeting">個案會議</string>
    <string name="counsel_care">優先關懷</string>
    <string name="counsel_interview_teacher_name">晤談老師</string>
    <string name="counsel_interview_type">晤談對象</string>
    <string name="counsel_interviewee_type">晤談方式</string>
    <string name="counsel_interview_cause">晤談事由</string>
    <string name="counsel_interview_attendees">參與人員</string>
    <string name="counsel_interview_counsel_type">輔導方式</string>
    <string name="counsel_interview_counsel_type_kind">輔導歸類</string>
    <string name="counsel_interview_content_digest">內容要點</string>
    <string name="counsel_author_name">記錄者 : </string>
    <string name="counsel_interview_no">編號 : </string>
    <string name="counsel_interview_date">日期 : </string>
    <string name="counsel_interview_time">時間 : </string>
    <string name="counsel_interview_place">地點 : </string>
    <string name="counsel_all">全部</string>
    <string name="counsel_interview_loading">取得輔導紀錄中&#8230;</string>
    <string name="counsel_meeting_no">個案編號 : </string>
    <string name="counsel_meeting_cause">會議事由</string>
    <string name="counsel_care_no">代號</string>
    <string name="counsel_care_date">立案日期</string>
    <string name="counsel_care_case_category">個案類別</string>
    <string name="counsel_care_case_origin">個案來源</string>
    <string name="counsel_superiority">優勢能力及財力</string>
    <string name="counsel_weakness">弱勢能力及阻力</string>
    <string name="counsel_goal">輔導人員輔導目標</string>
    <string name="counsel_other_institude">校外協輔機構</string>
    <string name="counsel_type">輔導人員輔導方式</string>
    <string name="counsel_assist_matter">協同輔導人員協助導師事項</string>
    <string name="counsel_empty_list">查無學生輔導資料</string>
    

    <!-- map activity -->
    <string name="title_activity_map">地圖</string>    
    <string name="map_navi">導航</string>
    <string name="map_my_location">我的位置</string>
    <string name="map_target_location">目的位置</string>
</resources>